--- a/styles/components/actor/character/layout.less
+++ b/styles/components/actor/character/layout.less
@@ -12,8 +12,10 @@
     min-width: 630px;
     .window-content {
       padding: 0;
+      overflow: hidden;
       form.editable,
       form.locked {
+        height: 100%;
         padding: 0;
         margin: 0;
         .main {
@@ -84,6 +86,8 @@
             flex: 1;
             padding: 5px;
             margin: 0;
+            overflow-y: auto;
+            height: calc(100% - 77px);
 
             h3.header {
               position: relative;
